shared-business-logics/services/ai-services/Backend/Java/data-analytics/time-series-forecasting-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: time-series-forecasting-service
  namespace: ai-services
  labels:
    app: time-series-forecasting-service
    team: team-f-ai-services
spec:
  type: ClusterIP
  selector:
    app: time-series-forecasting-service
  ports:
  - name: http
    port: 8246
    targetPort: 8246
    protocol: TCP
